{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 30,
  "lineage": "7347a322-d7dc-27ba-7797-9debe03597ba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dpt12-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f982b93851e10403",
            "arn": "arn:aws:ec2:us-east-1:337636137060:elastic-ip/eipalloc-0f982b93851e10403",
            "association_id": "eipassoc-0b076000a4970e6aa",
            "domain": "vpc",
            "id": "eipalloc-0f982b93851e10403",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00c9d80c2fd7ca899",
            "private_dns": "ip-192-168-1-207.ec2.internal",
            "private_ip": "192.168.1.207",
            "public_dns": "ec2-44-195-76-122.compute-1.amazonaws.com",
            "public_ip": "44.195.76.122",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AWSB56-ublic-Linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06b21ccaeff8cd686",
            "arn": "arn:aws:ec2:us-east-1:337636137060:instance/i-00700c28bb82df18d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00700c28bb82df18d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWSB56Key-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04a9687f97de277b5",
            "private_dns": "ip-192-168-1-238.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.238",
            "public_dns": "ec2-34-201-140-149.compute-1.amazonaws.com",
            "public_ip": "34.201.140.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f5fcf950694237cc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eea85d7626b7acfb",
            "tags": {
              "Name": "DPT12_EC2_public"
            },
            "tags_all": {
              "Name": "DPT12_EC2_public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0639731139300b004"
            ]
          },
          "dependencies": [
            "aws_key_pair.AWSB56Key-kp",
            "aws_security_group.dpt12_sg",
            "aws_subnet.firewall-subnet",
            "aws_vpc.dpt12-vpc",
            "data.aws_ami.amzn_linux_2023_latest",
            "tls_private_key.AWSB56Key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dpt12-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:internet-gateway/igw-0bb76ec7609ee9b85",
            "id": "igw-0bb76ec7609ee9b85",
            "owner_id": "337636137060",
            "tags": {
              "name": "dpt12-internet gateway"
            },
            "tags_all": {
              "name": "dpt12-internet gateway"
            },
            "vpc_id": "vpc-01913a357672e1261"
          },
          "dependencies": [
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dpt12-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f982b93851e10403",
            "association_id": "eipassoc-0b076000a4970e6aa",
            "connectivity_type": "public",
            "id": "nat-068c5c0b1a6b59712",
            "network_interface_id": "eni-00c9d80c2fd7ca899",
            "private_ip": "192.168.1.207",
            "public_ip": "44.195.76.122",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eea85d7626b7acfb",
            "tags": {
              "name": "dpt12 NAT Gateway"
            },
            "tags_all": {
              "name": "dpt12 NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.dpt12-eip",
            "aws_subnet.firewall-subnet",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:route-table/rtb-0b97c5e7c58e764c8",
            "id": "rtb-0b97c5e7c58e764c8",
            "owner_id": "337636137060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-068c5c0b1a6b59712",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private RT"
            },
            "tags_all": {
              "Name": "private RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01913a357672e1261"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dpt12-eip",
            "aws_nat_gateway.dpt12-ngw",
            "aws_subnet.firewall-subnet",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:route-table/rtb-001ac25ec3e84857f",
            "id": "rtb-001ac25ec3e84857f",
            "owner_id": "337636137060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bb76ec7609ee9b85",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public RT"
            },
            "tags_all": {
              "Name": "public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01913a357672e1261"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dpt12-igw",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dpt12-public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b8a3a9ec433b617",
            "route_table_id": "rtb-001ac25ec3e84857f",
            "subnet_id": "subnet-0eea85d7626b7acfb"
          },
          "dependencies": [
            "aws_internet_gateway.dpt12-igw",
            "aws_route_table.public-rt",
            "aws_subnet.firewall-subnet",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dpt12_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:security-group/sg-0639731139300b004",
            "description": "dpt06-sg",
            "egress": [],
            "id": "sg-0639731139300b004",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTPs access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound ICMP access",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound RDP access",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dpt06-sg",
            "name_prefix": "",
            "owner_id": "337636137060",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DPT12-SG"
            },
            "tags_all": {
              "Name": "DPT12-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-01913a357672e1261"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dpt12_sg_rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound SSH access",
            "from_port": 22,
            "id": "sgrule-357903287",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0639731139300b004",
            "security_group_rule_id": "sgr-09523c5147e6b344a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dpt12_sg",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dpt12_sg_rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound HTTP access",
            "from_port": 80,
            "id": "sgrule-1545636348",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0639731139300b004",
            "security_group_rule_id": "sgr-023e329f33f98101a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dpt12_sg",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dpt12_sg_rule3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound HTTPs access",
            "from_port": 443,
            "id": "sgrule-1974555673",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0639731139300b004",
            "security_group_rule_id": "sgr-0fa3b865a0185f3b5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dpt12_sg",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dpt12_sg_rule4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound RDP access",
            "from_port": 3389,
            "id": "sgrule-614566607",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0639731139300b004",
            "security_group_rule_id": "sgr-0da7341311e0c8a21",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dpt12_sg",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dpt12_sg_rule5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbounoutboubd all access",
            "from_port": 0,
            "id": "sgrule-1186134890",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0639731139300b004",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dpt12_sg",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dpt12_sg_rule6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound ICMP access",
            "from_port": -1,
            "id": "sgrule-1391813073",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0639731139300b004",
            "security_group_rule_id": "sgr-073817aa3166d9e0e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dpt12_sg",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "firewall-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:subnet/subnet-0eea85d7626b7acfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eea85d7626b7acfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337636137060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-01913a357672e1261"
          },
          "dependencies": [
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:subnet/subnet-0a6da36d1eec81eca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6da36d1eec81eca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337636137060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-01913a357672e1261"
          },
          "dependencies": [
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dpt12-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:vpc/vpc-01913a357672e1261",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0068db3e954609ff6",
            "default_route_table_id": "rtb-0071aefaf44ca0124",
            "default_security_group_id": "sg-0734dd56fa132dbb0",
            "dhcp_options_id": "dopt-4638863c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01913a357672e1261",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0071aefaf44ca0124",
            "owner_id": "337636137060",
            "tags": {
              "Name": "dpt12-vpc"
            },
            "tags_all": {
              "Name": "dpt12-vpc"
            }
          }
        }
      ]
    }
  ]
}